--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alembic>=1.18.4",
     "asyncpg>=0.31.0",
     "fastapi>=0.129.0",
+    "httpx>=0.28.1",
     "pydantic-settings>=2.13.1",
     "redis>=7.2.0",
     "sqlalchemy>=2.0.46",
