feat: extraction maintenance + public safety + timeline + review tools
- Public safety: ignore sensitive local files; add env template + public checklist docs
- Extractions: bad JSON stats + bad-only filter + refresh tools; improve search and guards
- UI: unify sorting across dashboard/assets/timeline; timeline layout fixes & tests
- DB/API: add extraction search indexes migration and related tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 # Python bytecode/cache
 __pycache__/
 *.pyc
+# local secrets
+.env
+apps/api/.env
+*.env
+
+# local runbooks
+RUNBOOK_LOCAL.txt
+RUNBOOK_LOCAL.*.txt
+
+# exported X data
+twitter-*.json
