chore(test): enforce isolated test DB and add verify workflow

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -3,11 +3,16 @@
 ENV=local
 DEBUG=false
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/investpulse
+DATABASE_URL_TEST=postgresql+asyncpg://postgres:postgres@localhost:5433/investpulse_test
+
+# Tests hard-switch to test DB and will fail if URL is not a test DB.
+TEST_DB_RESET_BEFORE=1
+TEST_DB_RESET_AFTER=1
 
 # Required for real extraction calls
 OPENAI_API_KEY=your_api_key_here
 OPENAI_BASE_URL=https://openrouter.ai/api/v1
-OPENAI_MODEL=qwen/qwen-2.5-72b-instruct
+OPENAI_MODEL=minimax/minimax-m2.5
 EXTRACTOR_MODE=auto
 
 # Optional metadata for OpenRouter headers
@@ -21,3 +26,4 @@ MODEL_CONTEXT_WINDOW_TOKENS=32768
 MODEL_PROMPT_RESERVE_TOKENS=4096
 MODEL_CHARS_PER_TOKEN=4
 RAW_MODEL_OUTPUT_MAX_CHARS=20000
+EXTRACT_JOB_MAX_CONCURRENCY=3
